# muted-notification

./: .gitignore  CMakeLists.txt  README.md  buildspec.json  format.sh
.github/scripts/: check-format.sh
.github/workflows/: build-project.yaml  main.yml
data/locale/: en-US.ini
src/: indicator.cpp  indicator.h  plugin-macros.h.in  plugin-main.c
